--- a/supergo-sso/supergo-sso-service/src/main/resources/templates/login.html
+++ b/supergo-sso/supergo-sso-service/src/main/resources/templates/login.html
@@ -53,7 +53,7 @@
                         let authorization = 'Bearer ' + token
                         alert(authorization);
                         axios({
-                            method: 'post',
+                            method: 'get',
                             url: url,
                             headers: {
                                 'Authorization': authorization
