添加了获取城市列表接口

--- a/supergo-page/supergo-page-service/src/main/resources/templates/item.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/item.html
@@ -24,6 +24,7 @@
         var itemCat3 = [[${itemCat3}]];
 		var specificationList = [[${specificationList}]];
         var customAttributeList = [[${customAttributeList}]];
+        var bearerToken = [[${bearerToken}]]
 	</script>
 
 </head>
