--- a/supergo-page/supergo-page-service/src/main/resources/templates/item.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/item.html
@@ -24,7 +24,8 @@
         var itemCat3 = [[${itemCat3}]];
 		var specificationList = [[${specificationList}]];
         var customAttributeList = [[${customAttributeList}]];
-        var bearerToken = [[${bearerToken}]]
+        var bearerToken = [[${bearerToken}]];
+        var provincesList = [[${provincesList}]];
 	</script>
 
 </head>
@@ -135,8 +136,7 @@
 							</div>
 							<!--设置边线-->
 							<div>
-								<div ref="leftLine" class="fl l-color" :style="'width:'+leftWidth+'px'"></div>
-								<div ref="rightLine" class="fr l-color" :style="'width:'+rightWidth+'px'"></div>
+								<div class="l-width l-color"></div>
 							</div>
 
 							<div class="city-list">
