--- a/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-item.css
+++ b/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-item.css
@@ -5,7 +5,8 @@
 
 #item {
     margin: 15px 0;
-    font-family: "微软雅黑"
+    font-family: "微软雅黑";
+    position: relative;
 }
 
 .preview-wrap {
@@ -430,12 +431,13 @@ ul.goods-intro li {
     position: absolute;
     background: white;
     z-index: 10;
-    left: 63px;
+    left: 563px;
     width: 470px;
     border:1px solid lightgrey;
     box-shadow: 0px 0px 2px 1px lightgrey;
     padding: 8px 60px 15px 10px;
     display: none;
+    top: 311px;
 }
 
 .a-color {
