--- a/supergo-page/supergo-page-service/src/main/resources/templates/head.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/head.html
@@ -10,7 +10,7 @@
                 <div class="shortcut">
                     <ul class="fl">
                         <li class="f-item">品优购欢迎您！</li>
-                        <li class="f-item" th:if="${userInfo.username == null}">请<a href="http://localhost:9999/api/sso/user/loginPage?url=http://localhost:9999/api/page/149187842868047.html" target="_blank">登录</a>　<span><a href="register.html" target="_blank">免费注册</a></span></li>
+                        <li class="f-item" th:if="${userInfo.username == null}">请<a href="http://www.supergo-sso.com/user/loginPage" target="_blank">登录</a>　<span><a href="register.html" target="_blank">免费注册</a></span></li>
                         <li class="f-item" th:if="${userInfo.username != null}">
                             <span th:text="${userInfo.username}"></span>
                             <span id="loginOutSpan">
