--- a/supergo-sso/supergo-sso-service/src/main/resources/templates/login.html
+++ b/supergo-sso/supergo-sso-service/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
             msg: ''
         },
         methods:{
-            doLogin(){
+            doLogin: function(){
                 axios({
                     method: 'post',
                     url: 'http://www.supergo-sso.com/user/doLogin',
