--- a/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-item.css
+++ b/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-item.css
@@ -463,3 +463,21 @@ ul.goods-intro li {
     position: relative;
     left: 5px;
 }
+
+.disable {
+    background: #f1f1f1;
+    border: 1px solid;
+    cursor: not-allowed;
+}
+
+.disable:hover {
+    background: #f1f1f1;
+    border: 1px solid;
+    cursor: not-allowed;
+}
+
+.disable:focus {
+    background: #f1f1f1;
+    border: 1px solid;
+    cursor: not-allowed;
+}
