--- a/supergo-page/supergo-page-service/src/main/resources/templates/item.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/item.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
 <head>
 	<meta charset="utf-8" />
@@ -181,7 +181,7 @@
 							<div class="fl">
 								<ul class="btn-choose unstyled">
 									<li>
-										<a href="javascript:void(0)" @click="addCart()" class="sui-btn  btn-danger addshopcar">加入购物车</a>
+										<a href="javascript:void(0)" v-bind:class="{ disable : disable }" @click="addCart()" class="sui-btn  btn-danger addshopcar">加入购物车</a>
 									</li>
 								</ul>
 							</div>
@@ -189,8 +189,6 @@
 					</div>
 				</div>
 			</div>
-
-
 
 			<!--product-detail-->
 			<div class="clearfix product-detail">
