--- a/supergo-page/supergo-page-service/src/main/resources/templates/unloginAddOrderCart.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/unloginAddOrderCart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
 <head>
 	<meta charset="utf-8" />
@@ -12,10 +12,12 @@
     <link rel="stylesheet" type="text/css" href="css/pages-unloginAddOrderCart.css" />
 	<script src="js/vuejs-2.5.16.js"></script>
 	<script src="js/axios-0.18.0.js"></script>
+	<script src="js/plugins/jquery/jquery.min.js"></script>
 	<script th:inline="javascript">
         var skuMap = [[${skuMap}]];
         var userInfo = [[${userInfo}]];
         var spec = [[${spec}]];
+        var bearerToken = [[${bearerToken}]];
 	</script>
 
 </head>
@@ -51,27 +53,29 @@
 </body>
 <script src="../js/vuejs-2.5.16.js"></script>
 <script src="../js/axios-0.18.0.js"></script>
-<script>
-    Vue.prototype.axios = 'axios';
-    new Vue({
-        el:'#app',
-        data:{
-            skuMap : skuMap
-        },
-        methods:{
-            showGoodsDetail: function(){
-                let url = 'http://www.supergo-page.com/page/html/build/' + this.skuMap.goods_id;
-                axios({
-                    method: 'get',
-                    url: url
-                }).then(function (res) {
-                    console.log(res);
-                    window.location.href = 'http://www.supergo-page.com/'+this.skuMap.goods_id+'.html';
-                }).catch(function (error) {
-                    alert("生成模板失败");
-                });
+<script type="text/javascript">
+    window.onload = function() {
+        Vue.prototype.axios = 'axios';
+        new Vue({
+            el:'#app',
+            methods:{
+                showGoodsDetail: function(){
+                    let url = 'http://www.supergo-page.com/page/html/build/' + skuMap.goods_id;
+                    axios({
+                        method: 'get',
+                        url: url,
+                        headers: {
+                            'Authorization': bearerToken
+                        }
+                    }).then(function (res) {
+                        console.log(res);
+                        window.location.href = 'http://www.supergo-page.com/'+ skuMap.goods_id+'.html';
+                    }).catch(function (error) {
+                        alert("生成模板失败");
+                    });
+                }
             }
-        }
-    });
+        });
+	}
 </script>
 </html>
