--- a/supergo-page/supergo-page-service/src/main/resources/templates/head.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/head.html
@@ -145,19 +145,34 @@
                     if(bearerToken != null) {
                         bearerToken1 = bearerToken;
                     }
-                    var url = "http://www.supergo-page.com/page/goods/showOrderCart";
-                    axios({
-                        method: 'get',
-                        url: url,
-                        headers: {
-                            'Authorization': bearerToken1
-                        }
-                    }).then(function (res) {
-                        console.log(res);
-                        window.location.href = 'http://www.supergo-page.com/showOrderCart.html';
-                    }).catch(function (error) {
-                        alert("生成模板失败");
-                    });
+                    if(userInfo.id != null) {
+                        var url = "http://www.supergo-page.com/page/goods/showOrderCart";
+                        axios({
+                            method: 'get',
+                            url: url,
+                            headers: {
+                                'Authorization': bearerToken1
+                            }
+                        }).then(function (res) {
+                            console.log(res);
+                            window.location.href = 'http://www.supergo-page.com/'+res.data.msg+'.html';
+                        }).catch(function (error) {
+                            alert("生成模板失败");
+                        });
+                    } else {
+                        var url = "http://www.supergo-page.com/page/goods/unloginShowOrderCart";
+                        axios({
+                            method: 'get',
+                            url: url,
+                            headers: {
+                                'Authorization': bearerToken1
+                            }
+                        }).then(function (res) {
+                            window.location.href = "http://www.supergo-page.com/nullShowOrderCart.html";
+                        }).catch(function (error) {
+                            alert("生成模板失败");
+                        });
+                    }
                 }
             }
         });
