--- a/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-showOrderCart.css
+++ b/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-showOrderCart.css
@@ -41,16 +41,24 @@
     background: red;
     color: white;
     text-decoration: none;
+    border-radius: 5px;
 }
 
 .div-span {
     font-size: 18px;
     color: red;
+    position: relative;
+    top: 10px;
 }
 
 .div-address {
     display: inline-block;
     float: right;
+}
+
+.div-address > span {
+    position: relative;
+    top: 3px;
 }
 
 .div-address > input {
@@ -191,6 +199,11 @@ table tfoot tr td input:first-child {
     margin-top: -10px;
 }
 
+.city-title {
+    position: relative;
+    top: 2px;
+}
+
 .city-list div ul li{
     list-style: none;
     display: inline-block;
@@ -220,6 +233,19 @@ table tfoot tr td input:first-child {
     padding: 8px 60px 15px 10px;
     display: none;
     top: 26.5px;
+}
+
+.a-position1 {
+    position: absolute;
+    background: white;
+    z-index: 10;
+    left: 447px;
+    width: 470px;
+    border:1px solid lightgrey;
+    box-shadow: 0px 0px 2px 1px lightgrey;
+    padding: 8px 60px 15px 10px;
+    display: none;
+    top: 108px;
 }
 
 .a-color {
