--- a/supergo-page/supergo-page-service/src/main/resources/templates/unloginAddOrderCart.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/unloginAddOrderCart.html
@@ -36,7 +36,7 @@
 			<img th:src="${skuMap.image}"/>
 			<div>
 				<div>
-					<span th:text="${skuMap.title}" class="success-middle-size"></span>
+					<span th:text="${skuMap.goods_name}" class="success-middle-size"></span>
 				</div>
 				<div>
 					<span class="success-middle-color" th:each="entity:${spec}" th:text="${entity.key}+':'+${entity.value}+' '"> </span>
@@ -46,7 +46,7 @@
 		</div>
 		<div class="success-bottom">
 			<a @click="showGoodsDetail();">查看商品详情</a>
-			<a @click="">去购物车结算</a>
+			<a @click="showOrderCart()">去购物车结算</a>
 		</div>
 	</div>
 </div>
@@ -72,6 +72,41 @@
                     }).catch(function (error) {
                         alert("生成模板失败");
                     });
+                },
+                //显示购物车信息
+                showOrderCart: function () {
+                    var bearerToken1 = '';
+                    if(bearerToken != null) {
+                        bearerToken1 = bearerToken;
+                    }
+                    if(userInfo.id != null) {
+                        var url = "http://www.supergo-page.com/page/goods/showOrderCart";
+                        axios({
+                            method: 'get',
+                            url: url,
+                            headers: {
+                                'Authorization': bearerToken1
+                            }
+                        }).then(function (res) {
+                            console.log(res);
+                            window.location.href = 'http://www.supergo-page.com/'+res.data.msg+'.html';
+                        }).catch(function (error) {
+                            alert("生成模板失败");
+                        });
+                    } else {
+                        var url = "http://www.supergo-page.com/page/goods/unloginShowOrderCart";
+                        axios({
+                            method: 'get',
+                            url: url,
+                            headers: {
+                                'Authorization': bearerToken1
+                            }
+                        }).then(function (res) {
+                            window.location.href = "http://www.supergo-page.com/"+res.data.msg+".html";
+                        }).catch(function (error) {
+                            alert("生成模板失败");
+                        });
+                    }
                 }
             }
         });
