--- a/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-showOrderCart.css
+++ b/supergo-page/supergo-page-service/src/main/resources/goods/css/pages-showOrderCart.css
@@ -171,6 +171,8 @@ table tfoot tr td input:first-child {
     background: #e54346;
     color: white;
     padding: 0px 15px;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .total {
