--- a/supergo-page/supergo-page-service/src/main/resources/templates/showOrderCart.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/showOrderCart.html
@@ -105,7 +105,7 @@
 						</div>
 					</td>
 					<td>
-						<strong v-text="v.price * v.num"></strong>
+						<strong v-text="Math.floor(v.price * v.num * 100) / 100"></strong>
 					</td>
 					<td>
 						<a @click="deleteGoods(v.id,v.item_id)">删除</a>
@@ -119,9 +119,9 @@
 							<input type="checkbox" :checked="checkModel.length === orderCartList.length" @click='checkAll()'/>全选
 							<a @click="deletePatch()">删除选中商品</a>
 							<span class="haveChose">已选择{{checkModel.length}}件商品</span>
-							<span class="total">总价:¥699.00</span>
+							<span class="total">总价:¥{{total}}</span>
 							<span class="promotion">促销：-¥0.00</span>
-							<a class="account">去结算</a>
+							<a class="account" @click="goAccount()">去结算</a>
 						</div>
 					</td>
 				</tr>
